# ai-hero

./: .gitignore  README.md
barrier/: README.md  app.py  ingest.py  logs.py  main.py  pyproject.toml  search_agent.py  search_tools.py
barrier/eval_logs/: barrier_rag_agent_20260628_223019_18113f.json  barrier_rag_agent_20260628_223026_7f11bd.json  barrier_rag_agent_20260628_223045_e9a7df.json  barrier_rag_agent_20260628_223105_c35871.json  barrier_rag_agent_20260628_223122_ff2d5b.json  barrier_rag_agent_20260628_223139_f4ab57.json  barrier_rag_agent_20260628_223249_980ebe.json  barrier_rag_agent_20260628_223325_77cbfb.json  barrier_rag_agent_20260628_224414_2dd406.json  barrier_rag_agent_20260628_224556_02ae53.json  barrier_rag_agent_20260628_231334_294a41.json  barrier_rag_agent_20260630_203305_64cacc.json  barrier_rag_agent_20260630_204146_cc8be5.json  barrier_rag_agent_20260630_211823_b52f31.json  barrier_rag_agent_20260630_213801_13a033.json  barrier_rag_agent_20260630_222909_31bd31.json  barrier_rag_agent_20260630_222948_73806a.json  barrier_rag_agent_20260630_223251_d24333.json  barrier_rag_agent_20260630_231521_f9222a.json  barrier_rag_agent_20260630_231548_c3f679.json  barrier_rag_agent_20260630_231616_7ef125.json  barrier_rag_agent_20260630_231637_f99fdf.json  barrier_rag_agent_20260630_231815_4b57e2.json
course/: Untitled.ipynb  pyproject.toml
course/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  aiemailcourse-checkpoint.ipynb
project/: Untitled.ipynb  aiemailproject.ipynb  ingest.py  logs.py  main.py  pyproject.toml  search_agent.py  search_tools.py
(+26 files in other folders)
