[project]
name = "barrier"
version = "0.1.0"
description = "AI FAQ assistant that indexes GitHub repositories and answers questions using a search-augmented LLM agent"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "minsearch>=0.0.5",
    "openai>=1.108.2",
    "pydantic-ai==1.0.9",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "streamlit>=1.58.0",
    "python-dotenv>=1.2.2",

]
