[project]
name = "course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "minsearch>=0.0.11",
    "openai>=2.34.0",
    "python-frontmatter>=1.1.0",
    "requests>=2.33.1",
    "sentence-transformers>=5.5.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
